--- a/src/TestLibGuiReusables/MenuPrincipal.form
+++ b/src/TestLibGuiReusables/MenuPrincipal.form
@@ -31,6 +31,7 @@
                   <Component id="botonCrearPruebaAmpliada" alignment="0" pref="281" max="32767" attributes="0"/>
                   <Component id="botonSalir" alignment="0" pref="281" max="32767" attributes="0"/>
                   <Component id="jPanel1" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="botonCrearExperimento" alignment="0" pref="281" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
           </Group>
@@ -46,7 +47,9 @@
               <Component id="botonCrearPruebaAmpliada" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="botonCrearLaboratorio" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="botonCrearExperimento" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
               <Component id="botonSalir" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
           </Group>
@@ -85,10 +88,17 @@
     <Component class="javax.swing.JButton" name="botonCrearLaboratorio">
       <Properties>
         <Property name="text" type="java.lang.String" value="Crear Laboratorio"/>
-        <Property name="actionCommand" type="java.lang.String" value="Crear Laboratorio"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCrearLaboratorioActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="botonCrearExperimento">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Crear Experimento"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonCrearExperimentoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
